k8s/network-policies/resources/qbittorrent.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/instance: internal-ingress-nginx
      ports: &ports
        - port: 80
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports: *ports
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports: *ports
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: homepage
      ports: *ports
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: gatus
      ports: *ports
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
